--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "lerna": "^3.13.1"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "material-table": "^1.69.3"
   }
 }
