--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
-    "material-table": "^1.69.3"
+    "material-table": "^1.69.3",
+    "smallest-enclosing-circle": "^1.0.2"
   }
 }
