--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
 		"@types/node": "^12.7.2",
 		"body-parser": "^1.19.0",
 		"chance": "^1.1.0",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"smallest-enclosing-circle": "^1.0.2"
 	},
 	"description": ""
 }
